--- a/samples/volumes/pv-pvc-sc-cm/mongo.deployment.yml
+++ b/samples/volumes/pv-pvc-sc-cm/mongo.deployment.yml
@@ -73,6 +73,19 @@ spec:
 
 ---
 
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo
+spec:
+  selector:
+    app: mongo
+  ports:
+  - port: 27017
+    targetPort: 27017
+
+---
+
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -90,119 +103,55 @@ spec:
       labels:
         app: mongo
     spec:
+      containers:
+        - image: mongo
+          name: mongo
+          ports:
+          - containerPort: 27017
+          command:
+          - mongod
+          - "--auth"
+          resources: {}        
+          volumeMounts:
+          - name: mongo-volume
+            mountPath: /data/db
+          env:
+            - name: MONGODB_DBNAME
+              valueFrom:
+                configMapKeyRef:
+                  key: MONGODB_DBNAME
+                  name: mongo-env
+            - name: MONGODB_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  key: MONGODB_PASSWORD
+                  name: mongo-env
+            - name: MONGODB_ROLE
+              valueFrom:
+                configMapKeyRef:
+                  key: MONGODB_ROLE
+                  name: mongo-env
+            - name: MONGODB_ROOT_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  key: MONGODB_ROOT_PASSWORD
+                  name: mongo-env
+            - name: MONGODB_ROOT_ROLE
+              valueFrom:
+                configMapKeyRef:
+                  key: MONGODB_ROOT_ROLE
+                  name: mongo-env
+            - name: MONGODB_ROOT_USERNAME
+              valueFrom:
+                configMapKeyRef:
+                  key: MONGODB_ROOT_USERNAME
+                  name: mongo-env
+            - name: MONGODB_USERNAME
+              valueFrom:
+                configMapKeyRef:
+                  key: MONGODB_USERNAME
+                  name: mongo-env
       volumes:
       - name: mongo-volume
         persistentVolumeClaim:
           claimName: mongo-pvc
-      containers:
-      - env:
-        - name: MONGODB_DBNAME
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_DBNAME
-              name: mongo-env
-        - name: MONGODB_PASSWORD
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_PASSWORD
-              name: mongo-env
-        - name: MONGODB_ROLE
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROLE
-              name: mongo-env
-        - name: MONGODB_ROOT_PASSWORD
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROOT_PASSWORD
-              name: mongo-env
-        - name: MONGODB_ROOT_ROLE
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROOT_ROLE
-              name: mongo-env
-        - name: MONGODB_ROOT_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROOT_USERNAME
-              name: mongo-env
-        - name: MONGODB_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_USERNAME
-              name: mongo-env
-        image: mongo
-        name: mongo
-        ports:
-        - containerPort: 27017
-        resources: {}        
-        volumeMounts:
-        - name: mongo-volume
-          mountPath: /data/db
-
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   labels:
-#     app: mongo
-#   name: mongo
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: mongo
-#   template:
-#     metadata:
-#       labels:
-#         app: mongo
-#     spec:
-#       volumes:
-#       - name: mongo-volume
-#         persistentVolumeClaim:
-#           claimName: mongo-pvc
-#       containers:
-#       - env:
-#         - name: MONGODB_DBNAME
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_DBNAME
-#               name: mongo-env
-#         - name: MONGODB_PASSWORD
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_PASSWORD
-#               name: mongo-env
-#         - name: MONGODB_ROLE
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROLE
-#               name: mongo-env
-#         - name: MONGODB_ROOT_PASSWORD
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROOT_PASSWORD
-#               name: mongo-env
-#         - name: MONGODB_ROOT_ROLE
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROOT_ROLE
-#               name: mongo-env
-#         - name: MONGODB_ROOT_USERNAME
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROOT_USERNAME
-#               name: mongo-env
-#         - name: MONGODB_USERNAME
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_USERNAME
-#               name: mongo-env
-#         image: codewithdan/mongo
-#         imagePullPolicy: IfNotPresent
-#         name: mongo
-#         ports:
-#         - containerPort: 27017
-#         resources: {}        
-#         volumeMounts:
-#         - name: mongo-volume
-#           mountPath: /data/db
