Updates to configmap and secrets demos

--- a/samples/secrets/mongo.deployment.yml
+++ b/samples/secrets/mongo.deployment.yml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app: mongo-env
-  name: mongo-env
+    app: mongo-secrets-env
+  name: mongo-secrets-env
 data:
   MONGODB_DBNAME: codeWithDan
-  MONGODB_PASSWORD: password 
   MONGODB_ROLE: readWrite
-  MONGODB_ROOT_PASSWORD: password
   MONGODB_ROOT_ROLE: root
   MONGODB_ROOT_USERNAME: dbadmin
   MONGODB_USERNAME: webrole
@@ -92,43 +90,49 @@ spec:
       - name: mongo-volume
         persistentVolumeClaim:
           claimName: mongo-pvc
+        # Example only - environment vars actually used here
+      - name: secrets
+        secret:
+          secretName: db-passwords
       containers:
       - env:
         - name: MONGODB_DBNAME
           valueFrom:
             configMapKeyRef:
               key: MONGODB_DBNAME
-              name: mongo-env
+              name: mongo-secrets-env
+        # Pull password from secrets
         - name: MONGODB_PASSWORD
           valueFrom:
-            configMapKeyRef:
-              key: MONGODB_PASSWORD
-              name: mongo-env
+            secretKeyRef:
+              name: db-passwords
+              key: mongodb-password
         - name: MONGODB_ROLE
           valueFrom:
             configMapKeyRef:
               key: MONGODB_ROLE
-              name: mongo-env
+              name: mongo-secrets-env
+        # Pull password from secrets
         - name: MONGODB_ROOT_PASSWORD
           valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROOT_PASSWORD
-              name: mongo-env
+            secretKeyRef:
+              name: db-passwords
+              key: mongodb-root-password
         - name: MONGODB_ROOT_ROLE
           valueFrom:
             configMapKeyRef:
               key: MONGODB_ROOT_ROLE
-              name: mongo-env
+              name: mongo-secrets-env
         - name: MONGODB_ROOT_USERNAME
           valueFrom:
             configMapKeyRef:
               key: MONGODB_ROOT_USERNAME
-              name: mongo-env
+              name: mongo-secrets-env
         - name: MONGODB_USERNAME
           valueFrom:
             configMapKeyRef:
               key: MONGODB_USERNAME
-              name: mongo-env
+              name: mongo-secrets-env
         image: mongo
         name: mongo
         ports:
@@ -137,70 +141,7 @@ spec:
         volumeMounts:
         - name: mongo-volume
           mountPath: /data/db
-
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   labels:
-#     app: mongo
-#   name: mongo
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: mongo
-#   template:
-#     metadata:
-#       labels:
-#         app: mongo
-#     spec:
-#       volumes:
-#       - name: mongo-volume
-#         persistentVolumeClaim:
-#           claimName: mongo-pvc
-#       containers:
-#       - env:
-#         - name: MONGODB_DBNAME
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_DBNAME
-#               name: mongo-env
-#         - name: MONGODB_PASSWORD
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_PASSWORD
-#               name: mongo-env
-#         - name: MONGODB_ROLE
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROLE
-#               name: mongo-env
-#         - name: MONGODB_ROOT_PASSWORD
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROOT_PASSWORD
-#               name: mongo-env
-#         - name: MONGODB_ROOT_ROLE
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROOT_ROLE
-#               name: mongo-env
-#         - name: MONGODB_ROOT_USERNAME
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_ROOT_USERNAME
-#               name: mongo-env
-#         - name: MONGODB_USERNAME
-#           valueFrom:
-#             configMapKeyRef:
-#               key: MONGODB_USERNAME
-#               name: mongo-env
-#         image: codewithdan/mongo
-#         imagePullPolicy: IfNotPresent
-#         name: mongo
-#         ports:
-#         - containerPort: 27017
-#         resources: {}        
-#         volumeMounts:
-#         - name: mongo-volume
-#           mountPath: /data/db
+        # Example only - environment vars actually used here
+        - name: secrets
+          mountPath: /etc/db-passwords
+          readOnly: true
