--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "statusBar.background": "#0064ae",
         "statusBarItem.hoverBackground": "#0081e1",
         "statusBar.foreground": "#e7e7e7"
-    }
+    },
+    "peacock.color": "#0064ae"
 }
