--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "activityBar.background": "#0081e1",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#ffffff",
+        "activityBarBadge.background": "#fff",
         "activityBarBadge.foreground": "#15202b",
         "statusBar.background": "#0064ae",
         "statusBarItem.hoverBackground": "#0081e1",
