Update mongo depoyment w/ user/pwd secret info

--- a/samples/secrets/mongo.deployment.yml
+++ b/samples/secrets/mongo.deployment.yml
@@ -6,10 +6,7 @@ metadata:
   name: mongo-secrets-env
 data:
   MONGODB_DBNAME: codeWithDan
-  MONGODB_ROLE: readWrite
-  MONGODB_ROOT_ROLE: root
-  MONGODB_ROOT_USERNAME: dbadmin
-  MONGODB_USERNAME: webrole
+  MONGO_INITDB_ROOT_USERNAME: admin
 
 ---
 
@@ -101,38 +98,17 @@ spec:
             configMapKeyRef:
               key: MONGODB_DBNAME
               name: mongo-secrets-env
+        - name: MONGO_INITDB_ROOT_USERNAME
+          valueFrom:
+            configMapKeyRef:
+              name: mongo-secrets-env
+              key: MONGO_INITDB_ROOT_USERNAME
         # Pull password from secrets
-        - name: MONGODB_PASSWORD
+        - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: db-passwords
               key: db-password
-        - name: MONGODB_ROLE
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROLE
-              name: mongo-secrets-env
-        # Pull password from secrets
-        - name: MONGODB_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-passwords
-              key: db-root-password
-        - name: MONGODB_ROOT_ROLE
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROOT_ROLE
-              name: mongo-secrets-env
-        - name: MONGODB_ROOT_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_ROOT_USERNAME
-              name: mongo-secrets-env
-        - name: MONGODB_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              key: MONGODB_USERNAME
-              name: mongo-secrets-env
         image: mongo
         name: mongo
         ports:
