--- a/samples/blue-green/nginx.service.yml
+++ b/samples/blue-green/nginx.service.yml
@@ -1,16 +1,16 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: tomcat-service
+  name: nginx-service
   labels:
-    app: tomcat
+    app: nginx
     role: $TARGET_ROLE
     env: prod
 spec:
   type: LoadBalancer
   selector:
-    app: tomcat
+    app: nginx
     role: $TARGET_ROLE
   ports:
     - port: 80
-      targetPort: 8080
+      targetPort: 80
