--- a/samples/jobs/pie-counter.cronjob.yml
+++ b/samples/jobs/pie-counter.cronjob.yml
@@ -20,4 +20,4 @@ spec:
             command:
             - "sh"
             - "-c"
-            - "echo 'scale=1000; 4*a(1)' | bc -l;sleep 2;echo 'scale=5000; 4*a(1)' | bc -l;"
+            - "echo 'scale=1000; 4*a(1)' | bc -l;sleep 2;"
