--- a/samples/metrics-server/kubernetes/metrics-server-service.yaml
+++ b/samples/metrics-server/kubernetes/metrics-server-service.yaml
@@ -6,10 +6,11 @@ metadata:
   namespace: kube-system
   labels:
     kubernetes.io/name: "Metrics-server"
+    kubernetes.io/cluster-service: "true"
 spec:
   selector:
     k8s-app: metrics-server
   ports:
   - port: 443
     protocol: TCP
-    targetPort: 443
+    targetPort: main-port
