--- a/labs/Getting Started with Kubernetes/End/Microservices/.k8s/customers-api-service.yaml
+++ b/labs/Getting Started with Kubernetes/End/Microservices/.k8s/customers-api-service.yaml
@@ -2,16 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.original.yml
-    kompose.version: 1.16.0 (0c01309)
-  creationTimestamp: null
+    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o ./.k8s
+    kompose.version: 1.21.0 (992df58d8)
   labels:
     io.kompose.service: customers-api
   name: customers-api
 spec:
   ports:
-  - name: "80"
-    port: 80
+  - name: "8080"
+    port: 8080
     targetPort: 80
   selector:
     io.kompose.service: customers-api
