--- a/labs/Getting Started with Kubernetes/End/Microservices/.k8s/monolithtomicroservices-deployment.yaml
+++ b/labs/Getting Started with Kubernetes/End/Microservices/.k8s/monolithtomicroservices-deployment.yaml
@@ -1,19 +1,23 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.original.yml
-    kompose.version: 1.16.0 (0c01309)
-  creationTimestamp: null
+    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o ./.k8s
+    kompose.version: 1.21.0 (992df58d8)
   labels:
     io.kompose.service: monolithtomicroservices
   name: monolithtomicroservices
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      io.kompose.service: monolithtomicroservices
   strategy: {}
   template:
     metadata:
-      creationTimestamp: null
+      annotations:
+        kompose.cmd: kompose convert -f docker-compose.k8s.yml -o ./.k8s
+        kompose.version: 1.21.0 (992df58d8)
       labels:
         io.kompose.service: monolithtomicroservices
     spec:
