Add comment about local vs hostPath for WSL2

--- a/samples/secrets/mongo.deployment.yml
+++ b/samples/secrets/mongo.deployment.yml
@@ -39,6 +39,10 @@ spec:
   # StorageClass has a reclaim policy default so it'll be "inherited" by the PV
   # persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
+
+  # Note: If you're on Docker Desktop for Windows and using WSL2 you may get an error using the `local` property below. 
+  # https://github.com/DanWahlin/DockerAndKubernetesCourseCode/issues/15
+  # Try changing the `local` property to `hostPath` in that scenario.
   local:
     path: /tmp/data/db
   nodeAffinity:
