--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,7 @@
         "statusBar.background": "#0064ae",
         "statusBarItem.hoverBackground": "#0081e1",
         "statusBar.foreground": "#e7e7e7",
-        "activityBar.activeBackground": "#0081e1",
-        "statusBar.border": "#0064ae"
+        "activityBar.activeBackground": "#0081e1"
     },
     "peacock.color": "#0064ae"
 }
