Move changes into main (#18)
* Add comment about PV path for Windows users

* Update readme

* Add message about Mac and PVs (thanks @Caleb9)

* Minor formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
         "statusBar.foreground": "#e7e7e7",
         "activityBar.activeBackground": "#0081e1"
     },
-    "peacock.color": "#0064ae"
+    "peacock.color": "#0064ae",
+    "gitdoc.enabled": false
 }
