--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,10 @@
         "statusBar.background": "#0064ae",
         "statusBarItem.hoverBackground": "#0081e1",
         "statusBar.foreground": "#e7e7e7",
-        "activityBar.activeBackground": "#0081e1"
+        "activityBar.activeBackground": "#0081e1",
+        "sash.hoverBorder": "#0081e1",
+        "statusBarItem.remoteBackground": "#0064ae",
+        "statusBarItem.remoteForeground": "#e7e7e7"
     },
     "peacock.color": "#0064ae",
     "gitdoc.enabled": false
