Fixes deprecation notices (#20)
* Update pie-counter.cronjob.yml

* Update metrics-apiservice.yaml

* Update metrics-server-deployment.yaml

--- a/samples/prometheus/metrics-server/kubernetes/metrics-server-deployment.yaml
+++ b/samples/prometheus/metrics-server/kubernetes/metrics-server-deployment.yaml
@@ -48,5 +48,5 @@ spec:
         - name: tmp-dir
           mountPath: /tmp
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
         kubernetes.io/arch: "amd64"
