--- a/labs/Getting Started with Kubernetes/End/Microservices/.k8s/monolithtomicroservices-service.yaml
+++ b/labs/Getting Started with Kubernetes/End/Microservices/.k8s/monolithtomicroservices-service.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o ./.k8s
+    kompose.cmd: kompose convert -f docker-compose.original.yml
     kompose.version: 1.21.0 (992df58d8)
+  creationTimestamp: null
   labels:
     io.kompose.service: monolithtomicroservices
   name: monolithtomicroservices
