--- a/labs/Getting Started with Kubernetes/End/Microservices/MonolithToMicroservices/Dockerfile
+++ b/labs/Getting Started with Kubernetes/End/Microservices/MonolithToMicroservices/Dockerfile
@@ -1,8 +1,8 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/core/sdk AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY MonolithToMicroservices/MonolithToMicroservices.csproj MonolithToMicroservices/
 RUN dotnet restore MonolithToMicroservices/MonolithToMicroservices.csproj
