--- a/labs/Getting Started with Kubernetes/End/Microservices/.k8s/customers.api-deployment.yaml
+++ b/labs/Getting Started with Kubernetes/End/Microservices/.k8s/customers.api-deployment.yaml
@@ -6,27 +6,27 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: lookup-api
-  name: lookup-api
+    io.kompose.service: customers-api
+  name: customers-api
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: lookup-api
+      io.kompose.service: customers-api
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: lookup-api
+        io.kompose.service: customers-api
     spec:
       containers:
       - env:
         - name: ASPNETCORE_ENVIRONMENT
           value: Development
-        image: lookup-api
+        image: customers-api
         imagePullPolicy: IfNotPresent
-        name: lookup-api
+        name: customers-api
         ports:
         - containerPort: 80
         resources: {}
