--- a/labs/Monolith to Microservices/End/Microservices/.k8s/monolithtomicroservices-deployment.yaml
+++ b/labs/Monolith to Microservices/End/Microservices/.k8s/monolithtomicroservices-deployment.yaml
@@ -3,13 +3,16 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -f docker-compose.original.yml
-    kompose.version: 1.16.0 (0c01309)
+    kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
     io.kompose.service: monolithtomicroservices
   name: monolithtomicroservices
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      io.kompose.service: monolithtomicroservices
   strategy: {}
   template:
     metadata:
