Add echo-job sample

--- a/labs/Monolith to Microservices/End/Microservices/.k8s/monolithtomicroservices-service.yaml
+++ b/labs/Monolith to Microservices/End/Microservices/.k8s/monolithtomicroservices-service.yaml
@@ -15,5 +15,6 @@ spec:
     targetPort: 80
   selector:
     io.kompose.service: monolithtomicroservices
+  type: LoadBalancer
 status:
   loadBalancer: {}
