Update to latest asp.net core

--- a/samples/canary/stable-app/dockerfile
+++ b/samples/canary/stable-app/dockerfile
@@ -1,8 +1,8 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet AS base
+FROM mcr.microsoft.com/dotnet/aspnet AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/core/sdk AS build
+FROM mcr.microsoft.com/dotnet/sdk AS build
 WORKDIR /src
 COPY stable-app.csproj .
 RUN dotnet restore stable-app.csproj
@@ -15,4 +15,4 @@ RUN dotnet publish stable-app.csproj -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "stable-app.dll"]
+ENTRYPOINT ["dotnet", "stable-app.dll"]```
