--- a/samples/canary/stable-app/stable-app.csproj
+++ b/samples/canary/stable-app/stable-app.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>stable_app</RootNamespace>
   </PropertyGroup>
-
-
 
 </Project>
